@startuml

package "AuthorSubdomain" {

    class Author {
        - authorId: String 
        - firstName: String
        - lastName: String
        - email: String
        + Author(authorId: String, firstName: String, lastName: String, email: String)
        + getAuthorId(): String
        + getFirstName(): String
        + getLastName(): String
        + getEmail(): String
        + setFirstName(firstName: String): void
        + setLastName(lastName: String): void
        + setEmail(email: String): void
    }

    class AuthorRepository {
        + save(author: Author): void
        + findById(authorId: String): Author
        + findByEmail(email: String): Author
    }
}

package "ReaderSubdomain" {

    class Reader {
        - readerId: String 
        - firstName: String
        - lastName: String
        - email: String
        + Reader(readerId: String, firstName: String, lastName: String, email: String)
        + getReaderId(): String
        + getFirstName(): String
        + getLastName(): String
        + getEmail(): String
        + setFirstName(firstName: String): void
        + setLastName(lastName: String): void
        + setEmail(email: String): void
    }

    class ReaderRepository {
        + save(reader: Reader): void
        + findById(readerId: String): Reader
        + findByEmail(email: String): Reader
    }
}

package "AuthSubdomain" {

    class AuthController {
        + resetPassword(auth0Request: Auth0Request): Auth0Response
    }

    class AuthService {
        + resetPassword(email: String): String
    }

    class AuthServiceImpl {
        - authService: AuthService
        - auth0Client: Auth0Client
        - authorRepository: AuthorRepository
        - readerRepository: ReaderRepository
        + AuthServiceImpl(auth0Client: Auth0Client, authorRepository: AuthorRepository, readerRepository: ReaderRepository)
        + resetPassword(auth0Request: Auth0Request): Auth0Response
    }

    class Auth0Client {
        + sendResetPasswordEmail(email: String): String
    }
}

AuthController --> AuthService
AuthServiceImpl --> Auth0Client
AuthServiceImpl --> AuthorRepository
AuthServiceImpl --> ReaderRepository

@enduml
